hphp/hack/test/typecheck/instantiate_unresolved3.php.exp
File "instantiate_unresolved3.php", line 16, characters 10-12:
Was expecting a return type hint (Typing[4030])
